k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pupoo-backend
  namespace: pupoo
spec:
  type: ClusterIP
  selector:
    app: pupoo-backend
  ports:
    - name: http
      port: 80
      targetPort: http
