k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pupoo-public
  namespace: pupoo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: pupoo-public
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:<AWS_ACCOUNT_ID>:certificate/d58bc288-7491-4463-919c-abf2ecf7f6a5
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/success-codes: "200"
    external-dns.alpha.kubernetes.io/hostname: api.pupoo.site
spec:
  ingressClassName: alb
  rules:
    - host: api.pupoo.site
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pupoo-backend
                port:
                  number: 80
